feat(service): specify http + native definitions in core plan